--- a/wflow-consoleweb/src/main/webapp/css/datalistBuilderView.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalistBuilderView.css
@@ -331,6 +331,9 @@ body .filter-cell .form-button {
 .dataList.size_sm > .table-wrapper > table.responsivetable > tbody > tr > td{
     display: block !important;
     border:0;
+    width: auto !important;
+    text-align: left;
+    padding: 5px 10px !important;
 }
 .dataList.size_sm > form > .table-wrapper > table.responsivetable > tbody > tr > td.rowaction_body,
 .dataList.size_sm > .table-wrapper > table.responsivetable > tbody > tr > td.rowaction_body{
